[tool.poetry]
name = "bot_rlt"
version = "0.1.0"
description = ""
authors = ["ProtKsen <protcenko.kseniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
pydantic = "^1.10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
